fable/test/valid/assign_to_array_elements.f
      program prog
      real abc(2)
      abc(1) = 10
      abc(2) = 20
      write(6, *) abc(1), abc(2)
      end
